# Python-Atlas

./: .gitignore  README.md  codeatlas.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/app/: api.py  main.py
backend/app/analysis/: analyzer.py  diff_analyzer.py
backend/app/config/: __init__.py  defaults.py  ignore_rules.py  loader.py  models.py
backend/app/export/: graph_json.py
backend/app/git/: worktree.py
backend/app/graph/: graph_builder.py
backend/app/metrics/: architecture_metrics.py  centrality.py  cycles.py  dead_modules.py  entry_points.py  hub_modules.py  isolates.py  metrics_aggregator.py  utils.py
backend/app/models/: graph_metrics_models.py  graph_models.py  import_models.py  scan_models.py
backend/app/parser/: module_parser.py
backend/app/scanner/: repo_scanner.py
backend/tests/: test_analyzer.py  test_api.py  test_architecture_metrics.py  test_centrality.py  test_cli_diff.py  test_config_loader.py  test_cycles.py  test_dead_modules.py  test_diff_analyzer.py  test_entry_points.py  test_graph_builder.py  test_graph_json.py  test_hub_modules.py  test_isolates.py  test_module_parser.py  test_repo_scanner.py  utils.py
code_atlas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: analyze.ts
frontend/src/graph/: adapters.ts  sampleData.ts
frontend/src/hooks/: useArchitectureGraph.ts
frontend/src/pages/: RepositoryAnalysisPage.tsx
samples/: graph-diff.json
(+11 files in other folders)
